--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <div id="bio_part">
                 <!-- <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div> -->
                     <p id="detail_fa">سلام!<br/>
-                    سپهر هستم. ۱۳ سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده ام و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
+                    سپهر هستم. <span class="experience_text" id="detail_fa">۱۳</span> سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده ام و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
                     خیلی زود کار حرفه ای را با ورود به حوزه نرم افزار آغاز کردم. داشتن تجربه کار های نرم افزاری و بعد ورود به رشته کامپیوتر، مرا در این شروع سریع کمک کرد. <br/><br/>
                     در سن ۲۴ سالگی سرپرست فنی تیم برنامه نویسی شرکت شده بودم  و  مستقیما در فرایند گزینش و آموزش نیرو های فنی حضور پیدا می کردم.<br/><br/>
                     تجربه برنامه نویسی نرم افزار های سفارشی باعث شد در سن ۲۶ سالگی یک فریم ورک برنامه نویسی به اسم <a id="web_page_fa" target="_blank" href="https://github.com/SaffronCode/SaffronCode">"زعفران کد"</a> را توسعه و معرفی کنم که توسط آن صد ها نرم افزار موبایل توسط ده ها برنامه نویس شرکت تولید و به مشتریان ارائه شد.<br/><br/>
                     با کسب تجربه حضور در بین صاحبین کسب و کار جهت توسعه نرم افزار های سفارشی و استارت آپ های مختلف،  به سمت ارائه خدمات مشاوره فنی و برنامه ریزی و طراحی معماری استارت آپ ها برای صاحبین کسب و کار شدم. از سوی دیگر نقش هایی مثل مدیریت و برنامه ریزی اجرای پروژه های نرم افزاری، تیم سازی و آموزش برنامه نویسان جوان و هدایت آنها برای حضور در بازار حرفه ای برنامه نویسی منطبق با نیاز بازار را نیز با اشتیاق دنبال می کنم.<br/><br/>
                     هنوز به کار های برنامه نویسی و حل مسئله های پیچیده الگوریتمی به هدف پیشبرد هرچه بهتر نرم افزار های مشتریان می پردازم تا هیچکدام از پروژه ها و برنامه نویسان در هیچ یک از مراحل اجرایی پروژهها متوقف و نا امید نشوند.</p>
                     <p id="detail">Hi,<br/>
-                        It's Sepehr. For 13 years, I have worked professionally in various fields of programming and software engineering for startups, and I have played a role in the development and implementation of hundreds of software.<br/><br/>
+                        It's Sepehr. For <span class="experience_text">13</span> years, I have worked professionally in various fields of programming and software engineering for startups, and I have played a role in the development and implementation of hundreds of software.<br/><br/>
                         I started my professional career very soon after entering the university for field of computer software.<br/><br/>
                         At the age of 24, I became the technical director of the programming team and was directly involved in the process of selecting and training technical staff.<br/><br/>
                         Being mentor for developing lots of startups, led me to develop and introduce my own startup which was a programming framework called <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode">"SaffronCode SDK"</a> at the age of 26, which hundreds of mobile software were produced and provided to customers by dozens of programmers.<br/><br/>
