--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MOHAMMAD E. SEPEHR, Principal Software Solution Architect</title>
     <meta name="description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
-    <meta property="og:image" content="https://ebrahimsepehr.ir/img/mesepehr.jpg" />
+    <meta property="og:image" content="https://ebrahimsepehr.ir/img/mesepehr.webp" />
     <meta name="robots" content="noodp,noydir" />
     <meta name="author" content="Mohammad E. Sepehr">
     <link rel="stylesheet" href="./style/style.css">
@@ -38,7 +38,7 @@
 <body>
     <header>
         <div id="image">
-            <img src="./img/mesepehr.jpg" alt="ebrahimsepehr.ir">
+            <img src="./img/mesepehr.webp" alt="ebrahimsepehr.ir">
         </div>
         <div id="info">
             <div>
@@ -389,14 +389,14 @@
                 <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middleware.</p>
                 <div id="status_box">
                     <div id="image_3">
-                        <a target="_blank" href="https://ebrahimsepehr.ir/img/Patent.jpeg"><img src="./img/Patent-icon.jpg" alt="Patent certificate"/></a>
+                        <a target="_blank" href="https://ebrahimsepehr.ir/img/Patent.webp"><img src="./img/Patent-icon.webp" alt="Patent certificate"/></a>
                     </div>
                     <div id="image_3">
-                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode-icon.png" alt="SaffronCode SDK logo"/></a>
+                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode-icon.webp" alt="SaffronCode SDK logo"/></a>
                     </div>
                 </div>
                 <div id="status_box">
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/Patent.jpeg">Patent ipm.ssaa.ir RN=66427</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/Patent.webp">Patent ipm.ssaa.ir RN=66427</a>
                     <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers">SaffronCode SDK</a>
                 </div>
                 <div id="status_box">
@@ -423,14 +423,14 @@
                 <div id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">(aui.ac.ir)</a></div>
                 <p id="detail">I had 3 workshops to introduce graphic designer students to the concepts of web programming.</p>
                 <div id="status_box">
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.jpg"><img src="./img/ArtUniversityofIsfahan-2015-icon.jpg" alt="Art University of Isfahan - 2015"/></a>
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.jpg"><img src="./img/ArtUniversityofIsfahan-2013-icon.jpg" alt="Art University of Isfahan - 2013"/></a>
-                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.jpg"><img src="./img/ArtUniversityofIsfahan-2012-icon.jpg" alt="Art University of Isfahan - 2012"/></a>
+                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp"><img src="./img/ArtUniversityofIsfahan-2015-icon.webp" alt="Art University of Isfahan - 2015"/></a>
+                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp"><img src="./img/ArtUniversityofIsfahan-2013-icon.webp" alt="Art University of Isfahan - 2013"/></a>
+                    <a target="_blank" id="image_3" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp"><img src="./img/ArtUniversityofIsfahan-2012-icon.webp" alt="Art University of Isfahan - 2012"/></a>
                 </div>
                 <div id="status_box">
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.jpg">Art University of Isfahan - 2015</a>
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.jpg">Art University of Isfahan - 2013</a>
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.jpg">Art University of Isfahan - 2012</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">Art University of Isfahan - 2015</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2013.webp">Art University of Isfahan - 2013</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2012.webp">Art University of Isfahan - 2012</a>
                 </div>
                 <div id="status_box">
                     <div id="status_bar">
@@ -455,14 +455,14 @@
                 <p id="detail">I have had interviews and lectures about "Saffron Code SDK".</p>
                 <div id="status_box">
                     <div id="image_2">
-                        <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.jpg" alt="Interview with Farhikhtegan mag."/></a>
+                        <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.webp" alt="Interview with Farhikhtegan mag."/></a>
                     </div>
                     <div id="image_2">
-                        <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.jpg" alt="Interview with Karshenasan.net"/></a>
+                        <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.webp" alt="Interview with Karshenasan.net"/></a>
                     </div>
                 </div>
                 <div id="status_box">
-                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.jpg">farhikhtegandaily.com Text</a>
+                    <a id="web_page" target="_blank" href="https://ebrahimsepehr.ir/img/ArtUniversityofIsfahan-2015.webp">farhikhtegandaily.com Text</a>
                     <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir Video (Farsi)</a>
                 </div>
 
