--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div id="title2">Bio</div>
                 <div id="bio_part">
                 <!-- <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div> -->
-                    <p id="detail_fa">سلام!<br/>
+                    <p id="detail_fa">سلام,<br/>
                     سپهر هستم. <span class="experience_text_light" id="detail_fa">.۰</span><span class="experience_text" id="detail_fa">۱۳</span> سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده ام و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
                     خیلی زود کار حرفه ای را با ورود به حوزه نرم افزار آغاز کردم. داشتن تجربه کار های نرم افزاری و بعد ورود به رشته کامپیوتر، مرا در این شروع سریع کمک کرد. <br/><br/>
                     در سن ۲۴ سالگی سرپرست فنی تیم برنامه نویسی شرکت شده بودم  و  مستقیما در فرایند گزینش و آموزش نیرو های فنی حضور پیدا می کردم.<br/><br/>
