My complete name

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOHAMMAD E. SEPEHR, Principal Software Solution Architect</title>
-    <meta name="description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
-    <meta property="og:description" content="Mohammad E. Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
+    <title>Mohammad Ebrahim Sepehr, Principal Software Solution Architect</title>
+    <meta name="description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
+    <meta property="og:description" content="Mohammad Ebrahim Sepehr (محمد ابراهیم سپهر)'s CV page. Expert in enterprise software solutions. Here is a list of professions, awards and certificates." />
     <meta property="og:image" content="https://ebrahimsepehr.ir/img/mesepehr.webp" />
     <meta name="robots" content="noodp,noydir" />
-    <meta name="author" content="Mohammad E. Sepehr">
+    <meta name="author" content="Mohammad Ebrahim Sepehr">
     <link rel="stylesheet" href="./style/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad E. Sepehr, Solution Architect, Programmer, Technical Lead, Agile Coach">
+    <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad Ebrahim Sepehr, Solution Software Architect, Programmer, Technical Lead, Agile Coach">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-230819555-1"></script>
