Bio final style

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             <img src="./img/mesepehr.webp" alt="ebrahimsepehr.ir">
         </div>
         <div id="info">
-            <p class="detail_fa" id="detail_fa">سلام,<br/>
+            <div id="title">&lt;/</div>
+            <p class="detail_fa" id="detail_fa">
                 سپهر هستم. <span class="experience_text_light" id="detail_fa">.۰</span><span class="experience_text" id="detail_fa">۱۳</span> سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده ام و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
             </p>
-            <p class="detail_en" id="detail">Hi,<br/>
+            <p class="detail_en" id="detail">
                 It's Sepehr. For <span class="experience_text">13</span><span class="experience_text_light">.0</span> years, I have worked professionally in various fields of programming and software engineering for startups, and I have played a role in the development and implementation of hundreds of software.<br/><br/>
             </p>
             <div>
@@ -53,6 +54,7 @@
                     <div id="detail">Technical Team Lead</div>
                     <div id="detail">Agile Methodology Leader</div>
                     <div id="detail">Programming and Algorithm Design</div>
+                    <div id="detail">Problem solving, Decision making</div>
             </div>
             
             <img id="my_sign" src="./img/social/Muhammad_Rasool_Allah.png" alt="Muhammad Rasool Allah"/>
