--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="info">
             <div id="title">&lt;/</div>
             <p class="detail_fa" id="detail_fa">
-                سپهر هستم. <span class="experience_text_light" id="detail_fa">.۰</span><span class="experience_text" id="detail_fa">۱۳</span> سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده ام و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
+                سپهر هستم. <span class="experience_text_light" id="detail_fa">.۰</span><span class="experience_text" id="detail_fa">۱۳</span> سال به صورت حرفه ای در حوزه های مختلف برنامه نویسی و مهندسی نرم افزاری استارت آپ ها مشغول به کار بوده و در توسعه و زیر بار رفتن صدها نرم افزار نقش ایفا کرده ام.<br/><br/>
             </p>
             <p class="detail_en" id="detail">
                 It's Sepehr. For <span class="experience_text">13</span><span class="experience_text_light">.0</span> years, I have worked professionally in various fields of programming and software engineering for startups, and I have played a role in the development and implementation of hundreds of software.<br/><br/>
