--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <p id="detail">I joined to this company as a Principal Solution Architect to build up all the necessary software infrastructure and technical teams within the company. also provide the best technical solutions for the next needs of them.</p>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>DevOps</h4>
+                        <h4>GitLab DevOps</h4>
                         <div><div class="p100"></div></div>
                     </div>
                     <div id="status_bar">
