My Name added to contact box

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
         <div id="left_side">
             <div id="sticky">
                 <div id="title">CONTACT</div>
-                    <div id="detail">Tehran, Iran</div>
+                    <div id="detail">Mohammad Ebrahim Sepehr</div>
                     <div id="detail"><a target="_blank" href="mailto:ebrahimsepehr@gmail.com">ebrahimsepehr@gmail.com</a></div>
                     <div id="detail"><a target="_blank" href="tel:+989127785180">+98 912 778 51 80</a></div>
                     <div id="detail"><a target="_blank" href="https://ebrahimsepehr.ir">ebrahimsepehr.ir</a></div>
+                    <div id="detail">Tehran, Iran</div>
                 
                     <div >
                         <div>
