--- a/index.html
+++ b/index.html
@@ -281,7 +281,10 @@
         <div id="title">Technical Advisor for Startups</div>
         <p id="detail">As an experienced technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
         <div id="title2">Holderwin - 2022    <span id="web_page">(Holderwin.com)</span></div>
-            <div id="detail">As a Co-Founder and CTO, I'm on gathering technical solutions and best architect to run this project perfectly.</div>
+            <div id="detail">As a Co-Founder and CTO, I'm on gathering technical solutions and best architect to run this project perfectly.
+                Holderwin is a platform which focus rewarding crypto currencies holders with insurance and financial services.
+In this platform users could use extraordinary (even free) options of insurance and financial services just by holding some crypto currencies.
+            </div>
             <div id="status_box">
                 <a target="_blank" id="web_page" href="https://Holderwin.com/">Holderwin.com</a>
             </div>
