--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         Gaining experience in being among business owners to develop custom software and various startups, I turned to providing technical consulting services and planning and architectural design of softwares for startups. On the other hand, I eagerly pursue roles such as team building and training young programmers and guiding them to participate in the professional programming fields.<br/><br/>
                         I am still working on programming and solving complex algorithmic problems with the aim of advancing the client software as much as possible so that none of the projects and programmers being stopped and disappointed in any of the project implementation stages.</p>
                 </div>
-            
+            <span class="part1">
             <div id="title">Principal Solution Architect - Technical Lead - R&D</div>
             <!-- <div id="title2">Major Customers</div> -->
                 <div id="title2">Bina Institute. - 2022    <a target="_blank" id="web_page" href="https://binainst.com/">(binainst.com - Mr. Nayerhoda)</a></div>
@@ -243,154 +243,157 @@
                         <div><div class="p10"></div></div>
                     </div>
                 </div>
+        </span>
 
+        <span class="part2">
+            <div id="title">Co-founder - Lead Programmer</div>
+            <div id="title2">Saffron Co.(2019 - 2021)</div>
+                <div id="detail">Technical Scope:  Development Director, Technical Lead, Research, JavaScript, Adobe Air</div>
+                <div id="detail">I was creator and founder of a Software Development Kit, named SaffronCodeSDK which gathered from about 500 Libraries and Tools.</div>
+                <div id="detail">SaffronCodeSDK is a mobile application development kit based on Adobe Air SDK compatible with Android, iOS, Windows, and Macintosh.</div>
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode">SaffronCode SDK</a>
+                    <a id="web_page" target="_blank" href="https://www.npmjs.com/package/saffroncodejs">SaffronCode JS</a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Software Programmer</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Technical Architect</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>JavaScript</h4>
+                        <div><div class="p95"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Technical Consultant</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>OWASP</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                </div>
+        </span>
 
-        <div id="title">Co-founder - Lead Programmer</div>
-        <div id="title2">Saffron Co.(2019 - 2021)</div>
-            <div id="detail">Technical Scope:  Development Director, Technical Lead, Research, JavaScript, Adobe Air</div>
-            <div id="detail">I was creator and founder of a Software Development Kit, named SaffronCodeSDK which gathered from about 500 Libraries and Tools.</div>
-            <div id="detail">SaffronCodeSDK is a mobile application development kit based on Adobe Air SDK compatible with Android, iOS, Windows, and Macintosh.</div>
-            <div id="status_box">
-                <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode">SaffronCode SDK</a>
-                <a id="web_page" target="_blank" href="https://www.npmjs.com/package/saffroncodejs">SaffronCode JS</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>Software Programmer</h4>
-                    <div><div class="p100"></div></div>
+        <span class="part3">
+            <div id="title">Technical Advisor for Startups</div>
+            <p id="detail">As an experienced technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
+            <div id="title2">Holderwin - 2022    <span id="web_page">(Holderwin.com)</span></div>
+                <div id="detail">As a Co-Founder and CTO, I'm on gathering technical solutions and best architect to run this project perfectly.
+                Holder win is a market-making platform & IPG for digital assets.
+    founded in 2022</div>
+                <div id="status_box">
+                    <a target="_blank" id="web_page" href="https://Holderwin.com/">Holderwin.com</a>
                 </div>
-                <div id="status_bar">
-                    <h4>Technical Architect</h4>
-                    <div><div class="p100"></div></div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>BlockChains</h4>
+                        <div><div class="p50"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Crypto Currencies</h4>
+                        <div><div class="p75"></div></div>
+                    </div>
                 </div>
-                <div id="status_bar">
-                    <h4>JavaScript</h4>
-                    <div><div class="p95"></div></div>
+            <div id="title2">Forjumps - 2022    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
+                <div id="detail">Forjump was some kind of video sharing community startup. I had to make a suitable and practical solution for hosting and promoting startup's web site on AWS services.</div>
+                <div id="status_box">
+                    <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
                 </div>
-                <div id="status_bar">
-                    <h4>Technical Consultant</h4>
-                    <div><div class="p80"></div></div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>PHP</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>MySQL</h4>
+                        <div><div class="p95"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>AWS</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Github Actions</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Remote Team Management</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
                 </div>
-                <div id="status_bar">
-                    <h4>OWASP</h4>
-                    <div><div class="p100"></div></div>
+            <div id="title2">Sarrafi Digital - 2021    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
+                <p id="detail">SarafiDigital was an Iranian online exchange startup. I had many researches about blockchain and cryptocurrencies and I selected a great team of programmers and graphic designers to complete the first phase of this project.</p>
+                <div id="status_box">
+                    <a id="web_page" target="_blank" href="https://beta.sarafidigital.com/">beta.sarafidigital.com</a>
                 </div>
-            </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Agile Coach</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>BlockChains</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Bitcoin</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Crypto Currencies</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>UI/UX</h4>
+                        <div><div class="p30"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>.net Core</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Bootstrap</h4>
+                        <div><div class="p80"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>MSSQL</h4>
+                        <div><div class="p40"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Socket.io</h4>
+                        <div><div class="p30"></div></div>
+                    </div>
+                </div>
 
-
-        <div id="title">Technical Advisor for Startups</div>
-        <p id="detail">As an experienced technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
-        <div id="title2">Holderwin - 2022    <span id="web_page">(Holderwin.com)</span></div>
-            <div id="detail">As a Co-Founder and CTO, I'm on gathering technical solutions and best architect to run this project perfectly.
-               Holder win is a market-making platform & IPG for digital assets.
-founded in 2022</div>
-            <div id="status_box">
-                <a target="_blank" id="web_page" href="https://Holderwin.com/">Holderwin.com</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>BlockChains</h4>
-                    <div><div class="p50"></div></div>
+                <div id="title2">AzTa Bazar - 2017 <span id="web_page">(Mr. Mohammad Zadeh, Mr. Shafeei)</span></div>
+                <p id="detail">AzTa Bazar was an online shopping service, focused on grocery products. the start up was created from a server side panel for admins, an Android application for grocery stores admins and an Android application for customers.</p>
+                <div id="status_box">
+                    <a id="web_page" target="_blank">No link available</a>
                 </div>
-                <div id="status_bar">
-                    <h4>Crypto Currencies</h4>
-                    <div><div class="p75"></div></div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>UML</h4>
+                        <div><div class="p100"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>C#</h4>
+                        <div><div class="p50"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>MSSQL</h4>
+                        <div><div class="p40"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Android</h4>
+                        <div><div class="p60"></div></div>
+                    </div>
                 </div>
-            </div>
-        <div id="title2">Forjumps - 2022    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
-            <div id="detail">Forjump was some kind of video sharing community startup. I had to make a suitable and practical solution for hosting and promoting startup's web site on AWS services.</div>
-            <div id="status_box">
-                <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>PHP</h4>
-                    <div><div class="p100"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>MySQL</h4>
-                    <div><div class="p95"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>AWS</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Github Actions</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Remote Team Management</h4>
-                    <div><div class="p100"></div></div>
-                </div>
-            </div>
-        <div id="title2">Sarrafi Digital - 2021    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
-            <p id="detail">SarafiDigital was an Iranian online exchange startup. I had many researches about blockchain and cryptocurrencies and I selected a great team of programmers and graphic designers to complete the first phase of this project.</p>
-            <div id="status_box">
-                <a id="web_page" target="_blank" href="https://beta.sarafidigital.com/">beta.sarafidigital.com</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>Agile Coach</h4>
-                    <div><div class="p100"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>BlockChains</h4>
-                    <div><div class="p100"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Bitcoin</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Crypto Currencies</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>UI/UX</h4>
-                    <div><div class="p30"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>.net Core</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Bootstrap</h4>
-                    <div><div class="p80"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>MSSQL</h4>
-                    <div><div class="p40"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Socket.io</h4>
-                    <div><div class="p30"></div></div>
-                </div>
-            </div>
-
-            <div id="title2">AzTa Bazar - 2017 <span id="web_page">(Mr. Mohammad Zadeh, Mr. Shafeei)</span></div>
-            <p id="detail">AzTa Bazar was an online shopping service, focused on grocery products. the start up was created from a server side panel for admins, an Android application for grocery stores admins and an Android application for customers.</p>
-            <div id="status_box">
-                <a id="web_page" target="_blank">No link available</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>UML</h4>
-                    <div><div class="p100"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>C#</h4>
-                    <div><div class="p50"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>MSSQL</h4>
-                    <div><div class="p40"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Android</h4>
-                    <div><div class="p60"></div></div>
-                </div>
-            </div>
+            </span>
 
             <div id="extra_space"></div>
 
