--- a/index.html
+++ b/index.html
@@ -480,6 +480,16 @@
                     <a id="web_page" target="_blank" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92">dotnetexpert.ir Video (Farsi)</a>
                 </div>
 
+                
+                <div id="title2">Bachelor degree</div>
+                <p id="detail">Bachelor of Science in Computer Software Engineering. Azad University, Central Tehran Branch, Iran
+                    </p>
+                <div id="status_box">
+                    <div id="image_2">
+                        <a target="_blank" href="https://ebrahimsepehr.ir/img/Bachelor.webp"><img src="./img/Bachelor.webp" alt="Bachelor degree, Science in Computer Software Engineering"/></a>
+                    </div>
+                </div>
+
                 <div id="extra_space"></div>
 
             
